{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 15,
  "lineage": "5e1fd766-65fa-340a-24b5-cde455c78a62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeeebd8d2ab47354",
            "arn": "arn:aws:ec2:us-east-1:454227745440:instance/i-0351345ebfc9f6277",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0351345ebfc9f6277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a512df228d59e33",
            "private_dns": "ip-10-1-1-109.ec2.internal",
            "private_ip": "10.1.1.109",
            "public_dns": "ec2-44-193-6-216.compute-1.amazonaws.com",
            "public_ip": "44.193.6.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ace492e2ef29bff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02236e3ee7162c503",
            "tags": {
              "Name": "terraform-aws-testing-Server-1"
            },
            "tags_all": {
              "Name": "terraform-aws-testing-Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01fe4760e6b94a8e8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:internet-gateway/igw-0f8c6aa8b029b280c",
            "id": "igw-0f8c6aa8b029b280c",
            "owner_id": "454227745440",
            "tags": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-igw",
              "Owner": "Bhanu"
            },
            "tags_all": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-igw",
              "Owner": "Bhanu"
            },
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:route-table/rtb-0a8501c5767329821",
            "id": "rtb-0a8501c5767329821",
            "owner_id": "454227745440",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8c6aa8b029b280c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0722787814a9a28c8",
            "route_table_id": "rtb-0a8501c5767329821",
            "subnet_id": "subnet-02236e3ee7162c503"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077c8f5560cffe8d0",
            "route_table_id": "rtb-0a8501c5767329821",
            "subnet_id": "subnet-0fdfa61d65d9112d2"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035361f2e58dd6553",
            "route_table_id": "rtb-0a8501c5767329821",
            "subnet_id": "subnet-0d9b74445237c090d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:security-group/sg-01fe4760e6b94a8e8",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fe4760e6b94a8e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "454227745440",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:subnet/subnet-02236e3ee7162c503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02236e3ee7162c503",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454227745440",
            "tags": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-1",
              "Owner": "Bhanu"
            },
            "tags_all": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-1",
              "Owner": "Bhanu"
            },
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:subnet/subnet-0fdfa61d65d9112d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0fdfa61d65d9112d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454227745440",
            "tags": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-2",
              "Owner": "Bhanu"
            },
            "tags_all": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-2",
              "Owner": "Bhanu"
            },
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:subnet/subnet-0d9b74445237c090d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0d9b74445237c090d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454227745440",
            "tags": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-3",
              "Owner": "Bhanu"
            },
            "tags_all": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing-Subnet-3",
              "Owner": "Bhanu"
            },
            "vpc_id": "vpc-06702d1b87cf1f7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454227745440:vpc/vpc-06702d1b87cf1f7b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-040bb80cd1b10aca1",
            "default_route_table_id": "rtb-057b1d9f95076c859",
            "default_security_group_id": "sg-0e9cf64108ef689c6",
            "dhcp_options_id": "dopt-f9a1cf83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06702d1b87cf1f7b3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057b1d9f95076c859",
            "owner_id": "454227745440",
            "tags": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing",
              "Owner": "Bhanu"
            },
            "tags_all": {
              "CC": "9000",
              "Env": "Prod",
              "Name": "terraform-aws-testing",
              "Owner": "Bhanu"
            }
          }
        }
      ]
    }
  ]
}